# src/modules/dashboard/dashboard.controller.js
@@ -1,0 +1,1 @@
+export { GetDashboardController } from '../../controllers/dashboard/get-dashboard.js'
