# src/routes/index.js
@@ -1,2 +1,3 @@
 export * from './transaction.js'
 export * from './user.js'
+export * from './dashboard.js'
